# depy

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  bin_locations.txt  depy.json
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/depy/: all.html  index.html  sidebar-items.js
docs/depy/package/: fn.multiple_packages_from_json.html  fn.save_packages_to_json.html  fn.single_package_from_json.html  index.html  sidebar-items.js  struct.Package.html
docs/depy/parsing/: index.html  sidebar-items.js  struct.EnvVar.html  struct.Manifest.html
docs/depy/shell/: fn.run_cmd_in_depy_dir.html  index.html  sidebar-items.js
docs/depy/shell/dir/: index.html  (+6 more)
docs/depy_cli/: all.html  fn.main.html  index.html
docs/depy_cli/args/: index.html  struct.ArgsCli.html  struct.ArgsGui.html
docs/depy_gui/: all.html  fn.main.html  index.html  sidebar-items.js
docs/depy_gui/args/: index.html  sidebar-items.js  struct.ArgsCli.html  struct.ArgsGui.html
docs/depy_gui/gui/: index.html  sidebar-items.js
docs/search.desc/depy/: depy-desc-0-.js
docs/search.desc/depy_cli/: depy_cli-desc-0-.js
docs/search.desc/depy_gui/: depy_gui-desc-0-.js
docs/src/depy/: lib.rs.html
manifest/: README.md  depy.json
src/: args.rs  bucket.rs  dir.rs  env_var.rs  installer.rs  json_installer.rs  lib.rs  main.rs  manifest.rs  package.rs  parse_json.rs  parse_json_manifest.rs  path.rs  shell.rs  tests.rs
src/package/: error.rs  mod.rs
src/parsing/: error.rs  mod.rs  parse_json.rs
src/shell/: bucket.rs  cleanup.rs  dir.rs  error.rs  install.rs  mod.rs  venv.rs
(+251 files in other folders)
