[package]
name = "depy"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
copy_dir = "0.1.3"
druid = { version = "0.8.3", features = ["im"] }
env_logger = "0.11.3"
fs_extra = "1.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
path-absolutize = "3.1.1"
remove_dir_all = "0.8.2"
serde_json = "1.0.117"
thiserror = "1.0.60"
ureq = "2.9.7"
